# nats-core

./: .gitignore  .mcp.json  README.md  command-history.md  coverage.json  pyproject.toml  system-arch-history.md
.claude/: CLAUDE.md  manifest.json
.claude/agents/: python-library-specialist-ext.md  python-library-specialist.md  python-testing-specialist-ext.md  python-testing-specialist.md
.claude/rules/: code-style.md  testing.md
.claude/task-plans/: TASK-132C-implementation-plan.md  TASK-83F5-implementation-plan.md  TASK-A500-implementation-plan.md  TASK-B725-implementation-plan.md  TASK-ETS1-implementation-plan.md  TASK-ETS2-implementation-plan.md  TASK-ETS3-implementation-plan.md  TASK-ETS4-implementation-plan.md  TASK-ETS5-implementation-plan.md  TASK-FR-002-implementation-plan.md  TASK-FR-003-implementation-plan.md  TASK-FR-004-implementation-plan.md  TASK-FR-005-implementation-plan.md  TASK-FR-006-implementation-plan.md  TASK-ME02-implementation-plan.md  TASK-ME03-implementation-plan.md  TASK-NC05-implementation-plan.md  TASK-NC06-implementation-plan.md  (+4 more)
.guardkit/: bootstrap_state.json  graphiti-query-log.jsonl  graphiti.yaml
docs/: buildplan.md
tests/: conftest.py  test_agent_config.py  test_client.py  test_client_integration.py  test_config.py  test_envelope.py  test_event_payloads_nc03.py  test_event_type_schemas.py  test_events.py  test_fleet_client.py  test_fleet_events.py  test_fleet_registration_scaffolding.py  test_jarvis_events.py  test_manifest.py  test_pipeline_payloads.py  test_routing.py  test_scaffolding.py  test_topics.py
(+401 files in other folders)
