[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nats-core"
version = "0.1.0"
description = "Shared contract layer for the Jarvis Ship's Computer fleet"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "nats-py>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "build>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nats_core"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "seam: marks tests as seam tests",
    "smoke: core happy-path scenarios",
    "key_example: key usage examples from BDD scenarios",
    "boundary: boundary and limit condition tests",
    "negative: invalid input and error-path tests",
    "edge_case: edge-case and unusual-input tests",
    "integration_contract: integration contract verification tests",
]
